--- a/css/custom.css
+++ b/css/custom.css
@@ -25,6 +25,18 @@ body {
 html {
     scroll-behavior: smooth;
 }
+video {
+    opacity: 0.5; /* Adjust opacity to allow the background image to show through */
+}
+
+#orderNow{
+    transition: all ease-in-out 200ms;
+}
+
+#orderNow:hover{
+    scale: 1.2;
+    transition: all ease-in-out 200ms;
+}
 
 .btn-lg-square {
     width: 56px;
@@ -77,17 +89,7 @@ html {
     background: #ff5d1c;
 }
 
-.my-carousel-progress {
-    background: #ccc;
-}
 
-
-.my-carousel-progress-bar {
-    background: greenyellow;
-    height: 2px;
-    transition: width 400ms ease;
-    width: 0;
-}
 
 #section-2 {
     background: url("../images/background-section.png");
@@ -107,6 +109,7 @@ html {
     background: url("../images/background-2.png");
     background-size: cover;
     background-position: center;
+    position: relative; /* Ensure the background image is applied correctly */
 }
 
 #section-5 {
