chef part added

--- a/css/custom.css
+++ b/css/custom.css
@@ -102,7 +102,7 @@ video {
 }
 
 #section-3 {
-    background: url("../images/background.jpg");
+    background: url("../images/background.png");
     background-size: cover;
     background-position: center;
     background-color: rgba(0,0,0,0.5);
