--- a/css/custom.css
+++ b/css/custom.css
@@ -134,36 +134,13 @@ video {
     background: #d54f1a;
     color: white;
 }
-
-.custom-table {
-    width: 100%;
-    border-collapse: collapse;
-    text-align: center;
-    color: black;
-    font-size: 1.1rem;
-
-
+.custom-card{
+    scale: 1;
+    transition: all ease-in-out 200ms;
 }
-
-.custom-table th {
-    background: mediumpurple;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: white;
-
-}
-
-.custom-table td {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: white;
-    background: rgba(193, 104, 66, 0.41);
-    text-align: left;
-    text-transform: capitalize !important;
-}
-
-.custom-table tr {
-    border-bottom: 1px solid transparent;
+.custom-card:hover{
+   scale: 1.05;
+    transition: all ease-in-out 200ms;
 }
 
 .w-custom {
