--- a/css/custom.css
+++ b/css/custom.css
@@ -187,6 +187,17 @@ video {
         width: 95%;
     }
 
+    #section-3{
+        display: block!important;
+    }
+    .custom-card{
+        width: 100%!important;
+        margin-bottom: 10px;
+    }
+    #btnMenu{
+        width: 100%!important;
+        margin: 0 auto!important;
+    }
     .c-icon {
         display: none;
     }
